react+api hello world

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AGarden</title>
+    <title>Savage Garden</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <!-- <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p> -->
+    <% #<p class="notice"><%= notice %#></p> %>
+    <% #<p class="alert"><%= alert %#></p> %>
     <%= yield %>
   </body>
 </html>
