--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,24 +1,29 @@
 // @import "materialize/components/color-variables";
 
-$primary-color: #4DBAC7 !default;
-$secondary-color: #F6C523 !default;
+// $primary-color: #4DBAC7 !default;
+// $secondary-color: #F6C523 !default;
 
-// @import 'colors';
+// // @import 'colors';
 
-// accent #F6C523
-// main #4DBAC7
+// // accent #F6C523
+// // main #4DBAC7
 
 
-//
+// //
 
-.primary {
-  background: $primary-color;
-  color: white;
+body {
+  margin: 0;
 }
 
-.accent {
-  background: $secondary-color;
-  // .brand-logo {
-  //   color: black;
-  // }
-}
+// .primary {
+//   background: $primary-color;
+//   color: white;
+// }
+
+// .accent {
+//   background: $secondary-color;
+//   // .brand-logo {
+//   //   color: black;
+//   // }
+// }
+// //
